--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,7 +1,7 @@
 html, body {
     height: 100%;
     margin: 0;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Titillium Web', sans-serif;
   }
 
   .customRow {
