--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -21,7 +21,7 @@
 <!-- Font Awesome, brug materials i stedet ellers flyt over til font awsome... find ud af det... -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
     crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
 <!-- <script src="https://unpkg.com/d3"></script> -->
 <link href="/stylesheet.css" rel="stylesheet" />
 
