--- a/views/modules/start.ejs
+++ b/views/modules/start.ejs
@@ -1,22 +1,21 @@
-<div>
+<div class="startPage">
     <!-- <button id="addbtnbtn">Add label</button>
     <div id="labeldiv"> 
         <label>First label</label>
     </div> -->
-    <div class="col-md-12" id="frontpageHeader">
-            <h1>Leepway din online fragtbørs</h1>
-    </div>
+
             <div class="col-md-6" id="userbtnlabel">
+                    <br>
                     <h3>Søg efter fragtopgaver for at få fyldt lastbilen til din næste rute</h2>
                 </div>
                 <div class="col-md-6" id="truckbtnlabel">
+                        <br>
                     <h3>Opret din transport opgave for at få flyttet dit gods til en skarp pris</h2>
                 </div>
     <div class="leftDiv column">
         <img id="userBtn" src="userbtn.png" class="startpagebtn  hover">
     </div>
-    <div>
-        
+    <div class="sepdiv">
     </div>
     <div class="rightDiv column">
         <img id="truckBtn" src="truck.png" class="startpagebtn  hover">
