--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -234,18 +234,43 @@ thead tr        {
 }
 #frontpageHeader {
     text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    color: #264A60;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 150px;
+    font-weight: 800;
+    letter-spacing: 3px;
+    line-height: 1;
+    text-shadow: #EDEDED 3px 2px 0;
+    position: relative;
 }
 
 #userbtnlabel{
     float: left;
-    border: 1px solid #264A60;
-    box-shadow: 2px 3px #264A60;
+    text-align: center;
+    border-top: 1px solid #264A60;
+    font-family: 'Open Sans', sans-serif;
+    letter-spacing: 1px;
+    
 }
 #truckbtnlabel{
     float: left;
-    border: 1px solid #264A60;
-    box-shadow: 2px 3px #264A60;
+    text-align: center;
+    border-top: 1px solid #264A60;
+    font-family: 'Open Sans', sans-serif;
+    letter-spacing: 1px;
+    
 }
+.sepdiv{
+    border-left: 6px solid #264A60;
+    height: 100%;
+    position: absolute;
+    left: 50%;
+    margin-left: -3px;
+}
+
+
 
 /* #background{
     position:absolute;
