Padding-top på search og fixed size på background (75px x 75px)

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -75,6 +75,10 @@ html, body {
     width: 50%;
   }
 
+  .padding-top{
+    padding-top: 15px;
+  }
+
 .container {
     margin-bottom: 50px;
     margin-top: 20px;
@@ -325,7 +329,7 @@ thead tr        {
     opacity: 0.05;    
     height: 100%;
     width: 100%;
-    background-size: 10% 15%;
+    background-size: 75px 75px;
     background-image: url("/truck_nt.png");
     background-repeat: repeat;
     position: absolute;
@@ -335,7 +339,7 @@ thead tr        {
     opacity: 0.05;    
     height: 100%;
     width: 100%;
-    background-size: 10% 15%;
+    background-size: 75px 75px;
     background-image: url("/userbtn_nt.png");
     background-repeat: repeat;
     position: absolute;
