--- a/views/modules/search.ejs
+++ b/views/modules/search.ejs
@@ -2,7 +2,7 @@
 <html>
 <div class="background_truck"> </div>
 <div class="container" id="container">
-    <div class="formDiv container">
+    <div class="formDiv container padding-top">
         <!--    
             <% if (typeof successMessage != 'undefined' && successMessage) { %>
             <div class="alert alert-success">
